# alertmanager-discord-rs

./: Cargo.toml  LICENSE  README.md  dofigen.yml  payload.json
src/: main.rs
src/discord/: mod.rs  thread.rs
src/handlers/: mod.rs  thread.rs  webhook.rs
src/models/: alert_manager.rs  mod.rs
