[package]
name = "alertmanager-discord"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
log = { version = "0.4", features = ["std", "serde", "kv"] }
tokio = { version = "1.0", features = ["full"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
dotenvy = "0.15"
